Correction des doublons possibles dans une série

--- a/css/print.css
+++ b/css/print.css
@@ -214,6 +214,7 @@ h3.exercice-title{
     line-height: 2;
     text-align: center;
     font-size: large;
+    font-weight: bold;
 }
 .ceinture-titre-colonne {
     text-align: center;
