Ajout possibilité de changer couleurs fond diaporamas

--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -822,8 +822,11 @@ Animations from https://www.w3schools.com/w3css/4/w3.css
 #slideshow {
   background-color: ivory;
 }
-.slide.impair {
+/*.slide.impair {
   background-color: rgb(250, 221, 189);
+}*/
+.slide.pair {
+  background-color: rgba(53, 34, 15, 0.2);
 }
 #slideshow .sample{
   z-index: 200;
