Correction de bugs, ajout d'activités, modifs d'activités, amélioration du moteur de recherche, ajout coche dans historique

--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -84,6 +84,9 @@ mark {
 #tab-historique ol > li {
   margin-top:0.6em;
 }
+.checkhistoric {
+  margin-right: 0.5em;
+}
 #searchLevels label {
   margin-left: 0.3rem;
   margin-right: 0.5rem;
