--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -179,7 +179,6 @@ mark {
   padding: 4px 10px 4px;
 }
 /* Range input, from http://danielstern.ca/range.css/ */
-
 #tab-parameters input[type=range] {
   -webkit-appearance: none;
   width: 100%;
@@ -481,6 +480,74 @@ aside > button {
 }
 .zoom-A1{
   font-size: 1.2em;
+}
+/* Keyboards */
+.numkey-base {
+  padding: 10px;
+  position: absolute;
+  left: 50%;
+  bottom: 0px;
+  transform: translate(-50%);
+  background-color: rgb(197, 197, 197);
+  border-radius: 6px;
+  display: grid;
+  grid-template-columns: repeat(5, 3em) 1em 3em 3em;
+  grid-template-rows: repeat(8, 1em);
+  grid-gap: 5px;
+  justify-content: center;
+  font-size: 2rem;
+  cursor: pointer;
+  grid-auto-columns: 2em;
+  grid-auto-rows: 1em;
+}
+.slider-34 .numkey-base {
+  font-size: 1.5rem;
+}
+.vertical.return .numkey-base {
+  font-size : 1.5rem;
+}
+.numkey-base .key {
+  background-color: rgb(243, 243, 243);
+  border: 2px solid rgb(44, 44, 44);
+  border-radius: 3px;
+  font-size: 1em;
+  text-align: center;
+  line-height: 2em;
+  grid-row: span 2;
+  user-select: none;
+}
+.slider-34 .numkey-base .key {
+  border: 1px solid rgb(44, 44, 44);
+}
+.numkey-base .action {
+  background-color: rgb(206, 205, 205);
+}
+.numkey-base .colored {
+  background-color: #b8c3ff;
+}
+.numkey-base .times {
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+}
+.numkey-base > div:not(.key){
+  grid-row: span 2;
+}
+.numkey-base .key:hover {
+  border: 1px solid #eeeeee;
+}
+.numkey-base .key:active {
+  background-color: lightgreen;
+}
+.numkey-base .backspace {
+  grid-row: 1 / 4;
+  grid-column: 5 / 6;
+}
+.numkey-base .enter {
+  grid-row: 4 / 9;
+  grid-column: 5 / 6;
+}
+.numkey-base .zero {
+  grid-column: 1 / 3;
 }
 /* Ranges de taille de texte */
 #slideshow-container input[type=range], #tab-enonce input[type=range], #tab-corrige input[type=range]{
@@ -894,6 +961,9 @@ Animations from https://www.w3schools.com/w3css/4/w3.css
 .slider-2 .slide {
   font-size : 2em;
 }
+.vertical.return .slider-2 .slide {
+  font-size: 1em;
+}
 /* pour les medias touchables */
 @media (hover:none),(hover:on-demand){
   .slider-1 .slide{
@@ -921,24 +991,25 @@ Animations from https://www.w3schools.com/w3css/4/w3.css
 .slider-chrono{
   width:15%;
 }
-.slide{
+.slide {
     position: relative;
     width:100%;
     height:calc(100% - 8.5rem);
     display: flex;
     flex-direction: column;
 }
-.vertical .slide{
+/* Pour les figures */
+.vertical:not(.return) .slide{
   flex-direction: row;
 }
 .slide > span, .slide > div {
     margin:auto;
 }
-.slide > div {
+/*.slide > div:not(.numkey-base) {
   height: 60%;
   width:60%;
-}
-.vertical .slide > div {
+}*/
+.vertical .slide > div:not(.numkey-base) {
   margin-top:0;
   height: 40%;
   width: 40%;
@@ -953,13 +1024,25 @@ Animations from https://www.w3schools.com/w3css/4/w3.css
     animation: blinker 2s linear infinite;
   }
 math-field {
-    margin: 3em;
+    /*margin: 3em;
     padding: 8px; 
-    border-radius: 8px;
+    border-radius: 8px;*/
+    margin: auto;
+    min-width:400px;
+    width: 80%;
     border: 1px solid rgba(0, 0, 0, .3); 
     box-shadow: 0 0 8px rgba(0, 0, 0, .2);
 }
-.return {
+.return .slider-2:nth-child(1){
+  transform: rotate(180deg);
+}
+.return .slider-34:nth-child(1){
+  transform: rotate(180deg);
+}
+.return .slider-34:nth-child(2){
+  transform: rotate(180deg);
+}
+#screen-division .return {
   transform: rotate(180deg);
 }
 @keyframes blinker {
