--- a/css/mem-projector.css
+++ b/css/mem-projector.css
@@ -17,4 +17,10 @@
   margin-left: 5px;
 }
 
+.action-btn-corrige button {
+  box-shadow: 1px 2px 3px #025296;
+  padding: 3px;
+  border-radius: 5px;
+}
+
 /*# sourceMappingURL=mem-projector.css.map */
