Amélioration UI/UX
Amélioration UI/UX

--- a/css/mathsmentales.css
+++ b/css/mathsmentales.css
@@ -687,7 +687,7 @@ h2.sg-title {
   margin-bottom: 0.5rem;
 }
 h2.sg-title, h3.sg-title {
-	color: #d0021b;
+	color: #025296;
 }
 .sg-title {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
