--- a/css/mem-projector.scss
+++ b/css/mem-projector.scss
@@ -1,4 +1,4 @@
-/*CSS (SCSS) Propore à Maths et Matic projector*/
+/* CSS (SCSS) Propore à Maths et Matic projector */
 
 $main-color: #025296;
 
@@ -24,5 +24,33 @@ $main-color: #025296;
         box-shadow: 1px 2px 3px $main-color;
         padding: 3px;
         border-radius: 5px;
+        transition: 0.5s;
+        &:hover{
+            color: $main-color;
+            box-shadow: 1px 2px 3px white;
+            transition: 0.5s;
+        }
+    }
+}
+
+.spanel-diapo-bs-icon{
+    font-size: 40px;
+}
+
+.cart-bs-icon{
+    font-size: 35px;
+}
+
+#button-type{
+    box-shadow: 1px 2px 3px $main-color;
+    padding: 3px;
+    border-radius: 5px;
+    transition: 0.5s;
+    margin: 5px;
+    &:hover{
+        background-color: $main-color;
+        color: white;
+        box-shadow: 1px 2px 3px white;
+        transition: 0.5s;
     }
 }
