Amélioration UI/UX
Amélioration UI/UX

--- a/css/mem-projector.scss
+++ b/css/mem-projector.scss
@@ -54,3 +54,9 @@ $main-color: #025296;
         transition: 0.5s;
     }
 }
+
+.h3-about{
+    color: $main-color;
+    text-align: center;
+    font-size: 20px;
+}
