--- a/css/mem-projector.css
+++ b/css/mem-projector.css
@@ -51,4 +51,10 @@
   transition: 0.5s;
 }
 
+.h3-about {
+  color: #025296;
+  text-align: center;
+  font-size: 20px;
+}
+
 /*# sourceMappingURL=mem-projector.css.map */
