--- a/css/mem-projector.css
+++ b/css/mem-projector.css
@@ -33,6 +33,7 @@
   font-size: 40px;
 }
 
+/*Début de marquage cart-bs-icon*/
 .cart-bs-icon {
   font-size: 35px;
 }
@@ -51,10 +52,24 @@
   transition: 0.5s;
 }
 
+/*Fin de marquage cart-bs-icon*/
 .h3-about {
   color: #025296;
   text-align: center;
   font-size: 20px;
+}
+
+.button-cle-data {
+  box-shadow: 1px 2px 3px #025296;
+  padding: 3px;
+  border-radius: 5px;
+  transition: 0.5s;
+  margin: 5px;
+}
+.button-cle-data:hover {
+  color: #025296;
+  box-shadow: 1px 2px 3px white;
+  transition: 0.5s;
 }
 
 /*# sourceMappingURL=mem-projector.css.map */
