--- a/css/mem-projector.scss
+++ b/css/mem-projector.scss
@@ -87,11 +87,23 @@ $main-color: #025296;
     width: 40px;
     height: 40px;
 }
+.carre-48{
+    width: 48px;
+    height: 48px;
+}
 .carre-64{
     width: 64px;
     height: 64px;
 }
+.carre-64-auto{
+    width: 64px;
+    height: auto;
+}
 .carre-100{
     width: 100px;
     height: 100px;
+}
+.carre-100-auto{
+    width: 100px;
+    height: auto;
 }
