Ajout de fonctionnalité :  Course aux nombres, correction d'exercices, modif d'exercices avec figures

--- a/css/print.css
+++ b/css/print.css
@@ -283,6 +283,9 @@ input[type="color"]{
     width:90%;
     height: 200px;
 }
+.nofig svg, .nofig br ~ svg {
+    display: none;
+}
 .red {
     color: red;
 }
