--- a/css/mem-projector.scss
+++ b/css/mem-projector.scss
@@ -1,6 +1,6 @@
 /* CSS (SCSS) Propore à Maths et Matic projector */
 
-$main-color: #025296;
+$main-color: rgb(1,120,245);
 
 .pop-up {
     background-color: $main-color;
